[gd_scene load_steps=3 format=3 uid="uid://dh0pv5nr688vl"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_12dly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg4of"]
bg_color = Color(0.466667, 0.6, 0.6, 0.831373)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12dly")

[node name="SettingsBtn" type="Button" parent="."]
layout_mode = 0
offset_right = 70.0
offset_bottom = 31.0
text = "Settings"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dg4of")

[node name="SettingsContainer" type="CenterContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Settings/SettingsContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Settings/SettingsContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -35.5
offset_right = 101.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/SettingsContainer/Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Turn Factor"

[node name="TurnFactorInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Visual Range (m)"

[node name="VisualRangeInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Protected Range (m)"

[node name="ProtectedRangeInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Centering Factor"

[node name="CenteringFactorInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Avoidance Factor"

[node name="AvoidFactorInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer7" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Matching Factor"

[node name="MatchingFactorInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer8" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "Max Speed (m/s)"

[node name="MaxSpeedInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer9" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
text = "Min Speed"

[node name="MinSpeedInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer10" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
text = "Flock Size"

[node name="FlockSizeInput" type="LineEdit" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Cancel" type="Button" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Update" type="Button" parent="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update
"

[node name="BoxContainer" type="BoxContainer" parent="Settings/SettingsContainer"]
layout_mode = 2

[connection signal="pressed" from="SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Settings/SettingsContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Update" to="." method="_on_update_pressed"]
